--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
     <section class="f-section">
         <h2 class="title text-gradient">Features</h2>
-       <div class="container" style="padding-top: 80px;">
+       <div class="container fco" >
             <div class="row">
                 <div class="col-md-3">
                     <div class="card card-f mb-4 shadow-sm g-box">
@@ -158,7 +158,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="./img/boy.png" class="img-responsive" alt="">
+                        <img src="./img/boy.png" class="img-responsive boy" alt="">
                     </div>
                 <div class="col-md-8" style="position: relative; z-index: 2;">
                     <img class="c3" src="./img/chat 3.png" alt="">
@@ -222,7 +222,7 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
     </div>
 </section>
 <section class="roadmap-section spacer por">
-    <img src="./img/b-circle.png" style="position: absolute;
+    <img src="./img/b-circle.png" class="b-circle" style="position: absolute;
     top: 16px;
     width: 269px;
     z-index: 10;
