--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
     </div>
 </section>
 <section class="roadmap-section spacer por">
-    <img src="./img/b-circle.png" class="b-circle" style="position: absolute;
+    <img src="./img/b-circle.png" class="b-circle "   style="position: absolute;
     top: 16px;
     width: 269px;
     z-index: 10;
@@ -546,6 +546,9 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper-base.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
+
+
   <script>
     $('.faq-heading').click(function () {
     $(this).parent('li').toggleClass('the-active').find('.faq-text').slideToggle();
@@ -554,6 +557,16 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
 $('.vMore').click(function () {
   $('.features-full').slideToggle();
 });
+
+var rellax = new Rellax('.rellax', {
+    speed: -2,
+    center: false,
+    wrapper: null,
+    round: true,
+    vertical: true,
+    horizontal: false
+  });
+
 
   </script>
 </body>
