--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap 4 Starter Template</title>
+  <title>MetaSpacer</title>
   <link rel="stylesheet" href="./css/bootstrap.min.css" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -163,8 +163,7 @@
                         <h5 class="card-title">Privacy and Security</h5>
                         <p class="card-text">
                            
-Privacy and Security: MetaSpace takes privacy and security very seriously, and our platform is designed to keep user data safe and secure at all times. 
-MetaSpace is not just a social networking platform but a unique and immersive experience that combines socializing, dating, and creative expression in one platform.Join MetaSpace today and discover the future of social networking! 
+MetaSpace takes privacy and security very seriously, and our platform is designed to keep user data safe and secure at all times. 
 
                         </p>
                       </div>
@@ -551,16 +550,16 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
           </p>
         </div>
         <div class="col-md-4">
-          <h5 class="line-title">Contact Details</h5>
+          <h5 class="line-title">Social</h5>
           <ul class="list-unstyled">
-            <li>123 Main Street</li>
-            <li>Anytown, USA 12345</li>
-            <li>Phone: (123) 456-7890</li>
-            <li>Email: info@company.com</li>
+            <li><a href="">Facebook</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Github</a></li>
           </ul>
         </div>
         <div class="col-md-4">
-          <h5 class="line-title">Quick Menu</h5>
+          <h5 class="line-title">Quick Link</h5>
           <ul class="list-unstyled">
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
