--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ MetaSpace takes privacy and security very seriously, and our platform is designe
         </p>
         </div>
     </section>
-    <section class="about-section spacer">
+    <section class="about-section spacer" id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
@@ -243,7 +243,7 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
         </div>
     </div>
 </section>
-<section class="roadmap-section spacer por">
+<section class="roadmap-section spacer por" id="roadmap">
     <img src="./img/b-circle.png" class="b-circle "   style="position: absolute;
     top: 16px;
     width: 269px;
@@ -350,7 +350,7 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
     </div>
 </div>
 </section>
-<section class="faq-section spacer por">
+<section class="faq-section spacer por" id="faq">
     <img class="big-pipe" src="./img/big-pipe.png" alt="">
     <div class="container">
         <div class="row align-items-center">
@@ -415,7 +415,7 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
 </div>
 </section>
 
-<section class="visioin-section spacer">
+<section class="visioin-section spacer" id="tokenomics">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
