--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       </div>
       <img class="hero-bg" src="./img/ezgif-2-75b8244db1.gif" alt="">
     </section>
-<section class="por" style="margin-top: -130px; z-index: 1;">
-    <img src="./img/fade.png"  style="position: absolute;
+<section class="por fade-c"  style="margin-top: -130px; z-index: 1;">
+    <img src="./img/fade.png" class="fade"  style="position: absolute;
     width: 100%;
     margin: auto;
     top: -140px;" alt="">
