--- a/index.html
+++ b/index.html
@@ -522,41 +522,49 @@ The MetaSpace dating space is a large-scale immersive environment that provides 
             <div class="row">
             <div class="col-md-3">
                 <div class="card mb-4 shadow-sm g-box">
-                    <img class="team-img" src="./img/Avatar.png" alt="">
+                    <img class="team-img" src="./img/01.jpeg" alt="">
                     <div class="card-body">
-                    <h5 class="card-title text-gradient mb-2">Olivia Rhye</h5>
-                    <p class="position mb-2">Founder & CEO</p>
-                    <p class="card-text">The CEO is responsible for the overall vision and strategy of MetaSpace. They work closely with other members of the management team to ensure the platform's success.</p>
+                    <h5 class="card-title text-gradient mb-2">Vasile Stingaciu</h5>
+                    <p class="position mb-2">CEO</p>
+                    <p class="card-text">
+                      Vasile is responsible for the overall vision and strategy of MetaSpace. They work closely with other members of the management team to ensure the platform's success. 
+                    </p>
                     </div>
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="card mb-4 shadow-sm g-box">
-                    <img class="team-img" src="./img/Avatar.png" alt="">
+                    <img class="team-img" src="./img/03.jpeg" alt="">
                     <div class="card-body">
-                    <h5 class="card-title text-gradient mb-2">Olivia Rhye</h5>
-                    <p class="position mb-2">Founder & CEO</p>
-                    <p class="card-text">The CEO is responsible for the overall vision and strategy of MetaSpace. They work closely with other members of the management team to ensure the platform's success.</p>
+                    <h5 class="card-title text-gradient mb-2">Ander Haim</h5>
+                    <p class="position mb-2">CTO</p>
+                    <p class="card-text">
+                      Ander oversees the development of MetaSpace's technology.They are responsible for building and maintaining the platform's infrastructure and ensuring that it runs smoothly and efficiently. 
+                    </p>
                     </div>
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="card mb-4 shadow-sm g-box">
-                    <img class="team-img" src="./img/Avatar.png" alt="">
+                    <img class="team-img" src="./img/02.jpeg" alt="">
                     <div class="card-body">
-                    <h5 class="card-title text-gradient mb-2">Olivia Rhye</h5>
-                    <p class="position mb-2">Founder & CEO</p>
-                    <p class="card-text">The CEO is responsible for the overall vision and strategy of MetaSpace. They work closely with other members of the management team to ensure the platform's success.</p>
+                    <h5 class="card-title text-gradient mb-2">Bula Wali</h5>
+                    <p class="position mb-2">Product Manager </p>
+                    <p class="card-text">
+                      Bula  lead the development and management of MetaSpace products and services. We work closely with other teams to ensure that the platform meets user needs and provides a seamless user experience. 
+                    </p>
                     </div>
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="card mb-4 shadow-sm g-box">
-                    <img class="team-img" src="./img/Avatar.png" alt="">
+                    <img class="team-img" src="./img/04.jpeg" alt="">
                     <div class="card-body">
-                    <h5 class="card-title text-gradient mb-2">Olivia Rhye</h5>
-                    <p class="position mb-2">Founder & CEO</p>
-                    <p class="card-text">The CEO is responsible for the overall vision and strategy of MetaSpace. They work closely with other members of the management team to ensure the platform's success.</p>
+                    <h5 class="card-title text-gradient mb-2">Stacken Schneider</h5>
+                    <p class="position mb-2">Head of Marketing Department</p>
+                    <p class="card-text">
+                      Stacken is responsible for promoting MetaSpace and acquiring users. They work closely with product teams to develop effective marketing strategies to reach target customers.
+                    </p>
                     </div>
                 </div>
               </div>
