--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
       <img class="hero-bg" src="./img/ezgif-2-75b8244db1.gif" alt="">
     </section>
-<section class="por fade-c"  style="z-index: 1;">
+<section class="por fade-c asfo-container"  style="z-index: 1;">
     <img src="./img/fade.png" class="fade"  style="position: absolute;
     width: 100%;
     margin: auto;
